--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "pouchdb": "^7.2.2",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
-    "pouchdb-adapter-websql-core": "git+https://github.com/demon24ru/pouchdb-adapter-websql-core.git",
-    "websql": "^2.0.2"
+    "pouchdb-adapter-sqlite-node": "git+https://github.com/demon24ru/pouchdb-adapter-sqlite-node.git"
   },
   "files": []
 }
