--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "license": "Apache-2.0",
   "repository": "https://github.com/pouchdb/pouchdb",
   "dependencies": {
-    "pouchdb": "^7.2.2",
+    "pouchdb-adapter-http": "^7.2.2",
+    "pouchdb-authentication": "^1.1.3",
+    "pouchdb-core": "^7.2.2",
+    "pouchdb-find": "^7.2.2",
+    "pouchdb-mapreduce": "^7.2.2",
+    "pouchdb-replication": "^7.2.2",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "pouchdb-adapter-sqlite-node": "git+https://github.com/demon24ru/pouchdb-adapter-sqlite-node.git"
