--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "pouchdb-adapter-sqlite-node": "git+https://github.com/demon24ru/pouchdb-adapter-sqlite-node.git",
-    "node-fetch": "2.6.0"
+    "node-fetch": "^3.1.0"
   },
   "files": []
 }
