--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "pouchdb-find": "^7.2.1",
     "pouchdb-mapreduce": "^7.2.1",
     "pouchdb-replication": "^7.2.1",
-    "express": "^4.17.1",
-    "express-pouchdb": "^4.2.0",
     "pouchdb-adapter-sqlite-node": "git+https://github.com/demon24ru/pouchdb-adapter-sqlite-node.git",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "express": "^4.17.1",
+    "express-pouchdb": "^4.2.0"
   },
   "files": []
 }
